* makefile.in (stageprofile_flags_to_pass): use -fprofile-generate. 	(stagefeedback_flags_to_pass): use -fprofile-use.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75486 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -3339,12 +3339,12 @@ STAGE2_FLAGS_TO_PASS = \
 	WERROR="@WERROR@" \
 
 STAGEPROFILE_FLAGS_TO_PASS = \
-	CFLAGS="$(BOOT_CFLAGS) -fprofile-arcs" 
+	CFLAGS="$(BOOT_CFLAGS) -fprofile-generate" 
 
 # Files never linked into the final executable produces warnings about missing
 # profile.
 STAGEFEEDBACK_FLAGS_TO_PASS = \
-	CFLAGS="$(BOOT_CFLAGS) -fbranch-probabilities" 
+	CFLAGS="$(BOOT_CFLAGS) -fprofile-use" 
 
 # Only build the C compiler for stage1, because that is the only one that
 # we can guarantee will build with the native compiler, and also it is the
