2004-01-07  Benjamin Kosnik  <bkoz@redhat.com>
	* configure.in: Add io bits to linux cross config.
	* configure: Regenerate.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75522 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/libstdc++-v3/configure.in
+++ b/gcc-3_3-branch/libstdc++-v3/configure.in
@@ -127,6 +127,12 @@ if test -n "$with_cross_host" || test x"$build" != x"$host"; then
       GLIBCPP_CHECK_LINKER_FEATURES
       GLIBCPP_CHECK_COMPLEX_MATH_SUPPORT
       GLIBCPP_CHECK_WCHAR_T_SUPPORT
+
+      # For showmanyc_helper().
+      AC_CHECK_HEADERS(sys/ioctl.h sys/filio.h)
+      GLIBCXX_CHECK_POLL
+      GLIBCXX_CHECK_S_ISREG_OR_S_IFREG
+
       AC_DEFINE(HAVE_COPYSIGN)
       AC_DEFINE(HAVE_COPYSIGNF)
       AC_DEFINE(HAVE_FINITE)
