--- a/libjava/Makefile.in
+++ b/libjava/Makefile.in
@@ -1508,20 +1508,32 @@ javax/print/attribute/standard/Copies.java \
 javax/print/attribute/standard/DateTimeAtCompleted.java \
 javax/print/attribute/standard/DateTimeAtCreation.java \
 javax/print/attribute/standard/DateTimeAtProcessing.java \
+javax/print/attribute/standard/DocumentName.java \
+javax/print/attribute/standard/JobHoldUntil.java \
 javax/print/attribute/standard/JobImpressions.java \
 javax/print/attribute/standard/JobImpressionsCompleted.java \
 javax/print/attribute/standard/JobKOctets.java \
 javax/print/attribute/standard/JobKOctetsProcessed.java \
 javax/print/attribute/standard/JobMediaSheets.java \
 javax/print/attribute/standard/JobMediaSheetsCompleted.java \
+javax/print/attribute/standard/JobMessageFromOperator.java \
+javax/print/attribute/standard/JobName.java \
+javax/print/attribute/standard/JobOriginatingUserName.java \
 javax/print/attribute/standard/JobPriority.java \
 javax/print/attribute/standard/JobPrioritySupported.java \
 javax/print/attribute/standard/NumberOfDocuments.java \
 javax/print/attribute/standard/NumberOfInterveningJobs.java \
 javax/print/attribute/standard/NumberUp.java \
+javax/print/attribute/standard/OutputDeviceAssigned.java \
 javax/print/attribute/standard/PagesPerMinute.java \
 javax/print/attribute/standard/PagesPerMinuteColor.java \
+javax/print/attribute/standard/PrinterInfo.java \
+javax/print/attribute/standard/PrinterLocation.java \
+javax/print/attribute/standard/PrinterMakeAndModel.java \
+javax/print/attribute/standard/PrinterMessageFromOperator.java \
+javax/print/attribute/standard/PrinterName.java \
 javax/print/attribute/standard/QueuedJobCount.java \
+javax/print/attribute/standard/RequestingUserName.java \
 javax/security/auth/x500/X500Principal.java \
 javax/sql/ConnectionEvent.java \
 javax/sql/ConnectionEventListener.java \
@@ -4235,20 +4247,32 @@ DEP_FILES =  .deps/$(srcdir)/$(CONVERT_DIR)/gen-from-JIS.P \
 .deps/javax/print/attribute/standard/DateTimeAtCompleted.P \
 .deps/javax/print/attribute/standard/DateTimeAtCreation.P \
 .deps/javax/print/attribute/standard/DateTimeAtProcessing.P \
+.deps/javax/print/attribute/standard/DocumentName.P \
+.deps/javax/print/attribute/standard/JobHoldUntil.P \
 .deps/javax/print/attribute/standard/JobImpressions.P \
 .deps/javax/print/attribute/standard/JobImpressionsCompleted.P \
 .deps/javax/print/attribute/standard/JobKOctets.P \
 .deps/javax/print/attribute/standard/JobKOctetsProcessed.P \
 .deps/javax/print/attribute/standard/JobMediaSheets.P \
 .deps/javax/print/attribute/standard/JobMediaSheetsCompleted.P \
+.deps/javax/print/attribute/standard/JobMessageFromOperator.P \
+.deps/javax/print/attribute/standard/JobName.P \
+.deps/javax/print/attribute/standard/JobOriginatingUserName.P \
 .deps/javax/print/attribute/standard/JobPriority.P \
 .deps/javax/print/attribute/standard/JobPrioritySupported.P \
 .deps/javax/print/attribute/standard/NumberOfDocuments.P \
 .deps/javax/print/attribute/standard/NumberOfInterveningJobs.P \
 .deps/javax/print/attribute/standard/NumberUp.P \
+.deps/javax/print/attribute/standard/OutputDeviceAssigned.P \
 .deps/javax/print/attribute/standard/PagesPerMinute.P \
 .deps/javax/print/attribute/standard/PagesPerMinuteColor.P \
+.deps/javax/print/attribute/standard/PrinterInfo.P \
+.deps/javax/print/attribute/standard/PrinterLocation.P \
+.deps/javax/print/attribute/standard/PrinterMakeAndModel.P \
+.deps/javax/print/attribute/standard/PrinterMessageFromOperator.P \
+.deps/javax/print/attribute/standard/PrinterName.P \
 .deps/javax/print/attribute/standard/QueuedJobCount.P \
+.deps/javax/print/attribute/standard/RequestingUserName.P \
 .deps/javax/rmi/BAD_OPERATION.P .deps/javax/rmi/CORBA/ClassDesc.P \
 .deps/javax/rmi/CORBA/ObjectImpl.P \
 .deps/javax/rmi/CORBA/PortableRemoteObjectDelegate.P \
