PR bootstrap/7817 	* Make-lang.in: Copy gcc.1 to g++.1 rather than using .so.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75620 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/Make-lang.in
+++ b/gcc/cp/Make-lang.in
@@ -154,9 +154,10 @@ c++.install-common: installdirs
 	  fi ; \
 	fi
 
-$(docobjdir)/g++.1:
-	-rm -f $@
-	-echo ".so man1/$(GCC_INSTALL_NAME).1" > $@
+# We can't use links because not everyone supports them, and we can't use
+# .so because Irix 6.5 doesn't support them.  So just copy the manpage.
+$(docobjdir)/g++.1: $(docobjdir)/gcc.1
+	cp $(docobjdir)/gcc.1 $(docobjdir)/g++.1
 
 c++.install-man: installdirs $(docobjdir)/g++.1
 	-if [ -f cc1plus$(exeext) ] ; then \
