2004-01-12  Gernot Hillier  <gernot.hillier@siemens.com>
	* configure.in: GLIBCXX->GLIBCPP.
	* configure: Regenerated.
	* aclocal.m4: Regenerated.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75728 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/libstdc++-v3/configure.in
+++ b/gcc-3_3-branch/libstdc++-v3/configure.in
@@ -130,8 +130,8 @@ if test -n "$with_cross_host" || test x"$build" != x"$host"; then
 
       # For showmanyc_helper().
       AC_CHECK_HEADERS(sys/ioctl.h sys/filio.h)
-      GLIBCXX_CHECK_POLL
-      GLIBCXX_CHECK_S_ISREG_OR_S_IFREG
+      GLIBCPP_CHECK_POLL
+      GLIBCPP_CHECK_S_ISREG_OR_S_IFREG
 
       AC_DEFINE(HAVE_COPYSIGN)
       AC_DEFINE(HAVE_COPYSIGNF)
