* Makefile.in (tree-ssa-loop.o): Add cfgloop.h dependency. 	(cfghooks.o): Add TIMEVAR_H and toplev.h dependency. 	* basic-block.h (struct edge_def): Use ir_type instead testing of 	cfg_hooks directly. 	(tidy_fallthru_edge, tidy_fallthru_edges, dump_bb, verify_flow_info): 	Declaration removed. 	* cfg.c (verify_flow_info, dump_bb): Moved to cfghooks.c. 	* cfgcleanup.c (try_simplify_condjump): Changed due to change of 	tidy_fallthru_edge. 	* cfghooks.c: Include timevar.h and toplev.h. 	(cfg_hooks): Made static. 	(tree_register_cfg_hooks, ir_type): New. 	(verify_flow_info, dump_bb): Moved from cfg.c. 	(redirect_edge_and_branch, redirect_edge_and_branch_force, 	split_block, split_block_after_labels, move_block_after, 	delete_basic_block, split_edge, create_basic_block, 	create_empty_bb, can_merge_blocks_p, merge_blocks, 	make_forwarder_block, tidy_fallthru_edge, tidy_fallthru_edges): New. 	* cfghooks.h (struct cfg_hooks): Modified. 	(redirect_edge_and_branch, redirect_edge_and_branch_force, split_block, 	delete_basic_block, split_edge, create_basic_block, can_merge_blocks_p, 	merge_blocks, make_forwarder_block): Changed into functions. 	(loop_optimizer_init, loop_optimizer_finalize): Removed. 	(HEADER_BLOCK, LATCH_EDGE): Moved into cfgloop.c. 	(tidy_fallthru_edge, tidy_fallthru_edges, create_empty_bb, 	verify_flow_info, dump_bb, ir_type): Declare. 	(cfg_layout_rtl_cfg_hooks): Declare. 	* cfglayout.c (copy_bbs): Don't call add_to_dominance_info. 	* cfgloop.c (HEADER_BLOCK, LATCH_EDGE): Moved from cfghooks.h. 	(update_latch_info, mfb_keep_just, mfb_keep_nonlatch): New functions. 	(canonicalize_loop_headers): Use new semantics of make_forwarder_block. 	* cfgloop.h (rtl_loop_optimizer_init, rtl_loop_optimizer_finalize): 	Removed. 	(loop_optimizer_init, loop_optimizer_finalize): Declare. 	* cfgloopmanip.c (split_loop_bb): Don't update dominators. 	(remove_bbs): Don't call remove_bbs. 	(create_preheader): Use make_forwarder_block. 	(mfb_keep_just, mfb_update_loops): New static

--- a/tree-ssa-20020619-branch/gcc/Makefile.in
+++ b/tree-ssa-20020619-branch/gcc/Makefile.in
@@ -1587,7 +1587,7 @@ tree-eh.o : tree-eh.c $(TREE_FLOW_H) $(CONFIG_H) $(SYSTEM_H) \
    $(RTL_H) $(TREE_H) $(TM_H) flags.h function.h except.h langhooks.h \
    $(GGC_H) tree-pass.h gt-tree-eh.h
 tree-ssa-loop.o : tree-ssa-loop.c $(TREE_FLOW_H) $(CONFIG_H) \
-   $(SYSTEM_H) $(RTL_H) $(TREE_H) $(TM_P_H) \
+   $(SYSTEM_H) $(RTL_H) $(TREE_H) $(TM_P_H) cfgloop.h \
    output.h diagnostic.h $(TIMEVAR_H) $(TM_H) coretypes.h $(TREE_DUMP_H) \
    tree-pass.h flags.h
 tree-optimize.o : tree-optimize.c $(TREE_FLOW_H) $(CONFIG_H) \
@@ -1821,7 +1821,7 @@ cfg.o : cfg.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) $(RTL_H) flags.h insn-
    $(BASIC_BLOCK_H) $(REGS_H) hard-reg-set.h output.h toplev.h $(RECOG_H) \
    function.h except.h $(GGC_H) $(TM_P_H) alloc-pool.h $(TIMEVAR_H) 
 cfghooks.o: cfghooks.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) $(RTL_H) $(TREE_H) \
-   $(BASIC_BLOCK_H) cfglayout.h $(TREE_FLOW_H)
+   $(BASIC_BLOCK_H) cfglayout.h $(TREE_FLOW_H) $(TIMEVAR_H) toplev.h
 cfgrtl.o : cfgrtl.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) $(RTL_H) flags.h \
    insn-config.h $(BASIC_BLOCK_H) $(REGS_H) hard-reg-set.h output.h toplev.h $(RECOG_H) \
    function.h except.h $(GGC_H) $(TM_P_H) insn-config.h $(EXPR_H)
