gcc/ 2004-01-14  Kelley Cook  <kcook@gcc.gnu.org>
	* Makefile.in: Define MAINT from --enable-maintainer-mode.

gcc/ada/
2004-01-14  Kelley Cook  <kcook@gcc.gnu.org>

	* Make-lang.in: Only regenerate texi files if --enable-maintainer-mode.\


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75860 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -169,6 +169,9 @@ STRICT2_WARN = -pedantic -Wno-long-long -Wold-style-definition @WERROR@
 # "extern" tags in header files.
 NOCOMMON_FLAG = @nocommon_flag@
 
+# This is set by --disable-maintainer-mode (default) to "#"
+MAINT = @MAINT@
+
 # These are set by --enable-checking=valgrind.
 RUN_GEN = @valgrind_command@
 VALGRIND_DRIVER_DEFINES = @valgrind_path_defines@
